<resources>
    <string name="app_name">CoNaObiad</string>

    <string name="add">Dodaj</string>
    <string name="ok">OK</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="cancel">Anuluj</string>
    <string name="delete">Usuń</string>
    <string name="delete_all">Usuń wszystko</string>
    <string name="edit">Zmień</string>
    <string name="edit_date">Zmień datę</string>

    <string name="settings">Ustawienia</string>

    <string name="dinners">Obiady</string>
    <string name="pick_date">Wybierz datę</string>
    <string name="add_dinner">Dodaj obiad</string>
    <string name="empty_dinner_list_message">Nie masz żadnego zapisanego obiadu</string>

    <string name="meals">Posiłki</string>
    <string name="pick_meal">Wybierz posiłek</string>
    <string name="empty_meal_list_message">Nie masz żadnego zapisanego posiłku. Czy przejść do ekranu dodawania?</string>
    <string name="put_meal_name">Wpisz nazwę posiłku</string>

    <string name="ingredients">Składniki</string>
    <string name="put_ingredient_name">Wpisz nazwę składnika</string>
    <string name="add_ingredients">Dodaj składniki</string>
    <string name="show_ingredients">Wyświetl składniki</string>

    <string name="statistics_item">Statystyki</string>

    <string name="recipe">Przepis</string>
    <string name="add_recipe">Dodaj przepis</string>
    <string name="show_recipe">Wyświetl przepis</string>
    <string name="no_recipe">**Brak przepisu**</string>

    <string name="first_day">Pierwszy dzień</string>
    <string name="first_day_summ">Wybierz początek tygodnia</string>
    <string name="days_no">Liczba dni</string>
    <string name="info">O programie</string>
    <string name="info_message">Aplikacja została stworzona na potrzeby konkursu Daj Się Poznać 2017</string>
    <string name="ingredient_added_message">Składnik został dodany</string>
    <string name="shopping_list">Lista zakupów</string>
    <string name="fill_list">Wypełnij losowo</string>
    <string name="fill_only_empty_list">Wypełnij puste</string>
    <string name="only_date_info">Możesz zmienić tylko datę</string>

    <string name="monday">Poniedziałek</string>
    <string name="tuesday">Wtorek</string>
    <string name="wednesday">Środa</string>
    <string name="thursday">Czwartek</string>
    <string name="friday">Piątek</string>
    <string name="saturday">Sobota</string>
    <string name="sunday">Niedziela</string>
    <string name="statistics_label">Wykres dla:</string>

    <string name="current_year">Bieżący rok</string>
    <string name="current_month">Bieżący miesiąc</string>
    <string name="custom_dates">Własne daty</string>
    <string name="whole_history">Cała historia</string>

    <string name="categories">Kategorie</string>
    <string name="put_category_name">Wpisz nazwę kategorii</string>
    <string name="add_category">Dodaj kategorię</string>
    <string name="show_category">Wyświetl kategorię</string>

    <string name="first_day_key" translatable="false">first_day</string>
    <string name="first_day_default_value">6</string>
    <string name="plan_length_key" translatable="false">plan_length</string>
    <string name="plan_length_default_value">7</string>
    <string name="plan_length_error_message">Długość planu może wynosić od 1 do 30</string>
</resources>
