<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Settings, should always be in the overflow -->
    <item
        android:icon="@drawable/ic_light_bulb"
        android:title="@string/fill_list"
        app:showAsAction="always">
        <menu xmlns:android="http://schemas.android.com/apk/res/android">
            <item
                android:id="@+id/fill_list_item"
                android:icon="@drawable/ic_light_bulb_bright"
                android:title="@string/fill_list" />
            <item
                android:id="@+id/fill_list_empty_item"
                android:icon="@drawable/ic_light_bulb"
                android:title="@string/fill_only_empty_list" />
        </menu>
    </item>

    <item
        android:id="@+id/shopping_list_item"
        android:icon="@drawable/ic_list_verification"

        android:title="@string/shopping_list"
        app:showAsAction="always" />

    <item
        android:id="@+id/meal_list_item"
        android:title="@string/meals"
        app:showAsAction="never" />

    <item
        android:id="@+id/ingredient_list_item"
        android:title="@string/ingredients"
        app:showAsAction="never" />

    <item
        android:id="@+id/category_list_item"
        android:title="@string/categories"
        app:showAsAction="never" />

    <item
        android:id="@+id/statistic_item"
        android:title="@string/statistics_item"
        app:showAsAction="never" />

    <item
        android:id="@+id/application_info_item"
        android:title="@string/info"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>