<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.projects.jezinka.conaobiad.AddDinnerActivity">

    <Button
        android:id="@+id/add_dinner_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/meal_name_text"
        android:layout_marginBottom="398dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="31dp"
        android:onClick="addDinner"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageButton
        android:src="@android:drawable/ic_menu_my_calendar"
        android:layout_width="72dp"
        android:layout_height="45dp"
        android:text="@string/pick_date"
        android:onClick="showDatePickerDialog"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="45dp"
        android:id="@+id/calendar_button"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/date_view"
        android:layout_marginLeft="16dp"
        app:layout_constraintHorizontal_bias="1.0" />


    <EditText
        android:id="@+id/meal_name_text"
        android:layout_width="249dp"
        android:layout_height="68dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/calendar_button"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="36dp"
        android:text="@string/pick_meal"
        android:textAlignment="center"
        android:textSize="32sp"
        android:onClick="showDinnersDialog"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <EditText
        android:id="@+id/meal_name_id"
        android:visibility="invisible"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:inputType="number" />

    <TextView
        android:id="@+id/date_view"
        android:layout_width="222dp"
        android:layout_height="47dp"
        android:textAlignment="textEnd"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="121dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/add_dinner_button"
        app:layout_constraintHorizontal_bias="0.123" />

</android.support.constraint.ConstraintLayout>
